cluster/apps/westar-wp-dev/mysql.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: westar-wp-dev
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mariadb:10
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-data
            subPath: mysql
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
