cluster/apps/westar-wp-dev/wordpress.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: westar-wp-dev
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.8.2-php8.1-fpm
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
          - name: wordpress-data
            mountPath: /var/lib/mysql
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-data
