cluster/apps/westar-wp-dev/mysql.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: westar-wp-dev
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: mysql
