cluster/apps/westar-wp-dev/wordpress.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: westar-wp-dev
spec:
  selector:
    app: wordpress
  ports:
  - port: 80
    targetPort: web
