cluster/apps/westar-wp-dev/wordpress.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: westar-wp-dev
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  ingressClassName: nginx
  rules:
  - host: westar.${DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port: 
              number: 80
  tls:
    - hosts:
      - westar.${DOMAIN}
      secretName: wordpress-tls
